--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.item-block {
+  border-radius: 8px;
+//  float: left;
+  width: 90%;
+  min-height: 228px;
+  max-width: 450px;
+  border: 0px black solid;
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 10px;
+  background-color: #F0F0F0;
+  color: #000000;
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.2);
+}
+
+.new-item-form {
+  border-radius: 8px;
+  width: 50%;
+  padding: 40px;
+  padding-top: 8px;
+  padding-bottom: 20px;
+  border: 1px black solid;
+//  background-color: #AEB7E8;
+}
+
+.edit-item-link {
+  position: absolute; 
+  bottom: 20px;
+}
